function renderContactsDesktop() and function renderAddContactButtonDesktop() and function groupContactsByFirstLetter() and function createLetterContainer(firstLetter) and function createContactContainer(oneContact) and function openContactScreenDesktop(contactId) and function openContactScreenDesktopHTML(content, selectedContact) and function openContactsScreenDesktopChangeColorWhite(contactId) and function openContactsScreenDesktopChangeColorBlack(contactId) and function showContactsContentRightSideDesktop() and function singleMemberToHTMLOpenContactDesktop(member, index) added

--- a/contacts.html
+++ b/contacts.html
@@ -45,6 +45,7 @@
     <div w3-include-html="./assets/templates/header.html"></div>
     <div id="all-contacts-id" class="allContacts"></div>
     <div id="one-contact-id"></div>
+    <div class="contactsContentRightSideContainerDesktop" id="contacts-content-right-side-container-desktop-id"></div>
     <div w3-include-html="./assets/templates/footer.html"></div>
   </div>
     
