--- a/contacts.html
+++ b/contacts.html
@@ -44,8 +44,13 @@
   <div class="contactsContent" id="contacts-content-id">
     <div w3-include-html="./assets/templates/header.html"></div>
     <div id="all-contacts-id" class="allContacts"></div>
-    <div id="one-contact-id"></div>
-    <div class="contactsContentRightSideContainerDesktop" id="contacts-content-right-side-container-desktop-id"></div>
+    <div id="one-contact-id"></div>    
+    <div w3-include-html="./assets/templates/footer.html"></div>
+  </div>
+
+  <div class="contactsContentContainerDesktop" id="contacts-content-container-desktop-id">
+    <div w3-include-html="./assets/templates/header.html"></div>
+    <div class="contactsContentDesktop" id="contacts-content-desktop-id"></div>
     <div w3-include-html="./assets/templates/footer.html"></div>
   </div>
     
