rendering contacts into assigend dropdown, still WOP

--- a/add_task.html
+++ b/add_task.html
@@ -25,7 +25,6 @@
     
     <div class="content-container">
         <h1>Add Task</h1>
-        <div class="content-top-and-left ">
             <div class="at-title">
                 <label>Title</label>
                 <div class="input_global  input_at">
@@ -40,10 +39,9 @@
                 <label>Assigned to</label>
                 <div class="input_global input_at">
                     <input placeholder="Select contacts to assign">
-                    <img id="rotate-arrow-id" class="rotate-arrow" src="./assets/svg/arrow_drop_down.svg" onclick="toggleAssignedToContainer()" >
+                    <img id="rotate-arrow-id" class="rotate-arrow" src="./assets/svg/arrow_drop_down.svg" onclick="toggleAssignedToContainer()">
                 </div>
-                <div id="Assigned-to-contacts-id" class=""></div>
-                
+                <div id="assigned-to-contacts-id" class="dropdown"></div>
                 <div>added assigned icons here</div>
             </div>
         </div>
