--- a/contacts.html
+++ b/contacts.html
@@ -8,8 +8,7 @@
     <!--style.css integration</!-->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/contacts.css">
-    <link rel="stylesheet" href="./css/footer.css">
-    <link rel="stylesheet" href="./css/desktop_footer.css">
+    <link rel="stylesheet" href="./css/footer.css">    
     <link rel="stylesheet" href="./css/header.css">
 
     <!--script.js integration</!-->
@@ -56,7 +55,7 @@
     <div class="contactsContentDesktop" id="contacts-content-desktop-id"><h1>contactsContentDesktop</h1></div>    
   </div>
 
-  <div w3-include-html="./assets/templates/desktop_footer.html"></div>
+  <!--<div w3-include-html="./assets/templates/desktop_footer.html"></div></!-->
     
 </body>
 
