cintacts.html contactsContentContainerDesktop and contactsContentDesktop div container moved to contactsContent div container and contacts.css @media only screen and (max-width: 4000px) and (min-width: 760px) class .contactsContent display: flex; added

--- a/contacts.html
+++ b/contacts.html
@@ -43,14 +43,16 @@
     
   <div w3-include-html="./assets/templates/header.html"></div>
 
-  <div class="contactsContent" id="contacts-content-id">    
+  <div class="contactsContent" id="contacts-content-id"><!-- Only for mobile view </!-->
     <div id="all-contacts-id" class="allContacts"></div>
-    <div id="one-contact-id"></div>    
+    <div id="one-contact-id"></div>
+
+    <div class="contactsContentContainerDesktop" id="contacts-content-container-desktop-id">  <!-- Only for desktop view, is hidden when on mobile view </!-->
+      <div class="contactsContentDesktop" id="contacts-content-desktop-id"><h1>contactsContentDesktop</h1></div>    
+    </div>
   </div>
   
-  <div class="contactsContentContainerDesktop" id="contacts-content-container-desktop-id">    
-    <div class="contactsContentDesktop" id="contacts-content-desktop-id"><h1>contactsContentDesktop</h1></div>    
-  </div>
+  
 
   <div w3-include-html="./assets/templates/footer.html"></div>
     
