contacts2.js renamed in contacts_mobile.js and add_task.html and contacts.html js integration changed for this file

--- a/add_task.html
+++ b/add_task.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/add_task.css">
     <script src="./js/add_task.js" ></script>
-    <script src="./js/contacts2.js" ></script>
+    <script src="./js/contacts_mobile.js" ></script>
     <script src="./js/register.js" ></script>
     <script src="./js/template.js" ></script>
     <script src="./js/includeHTML.js"></script>
