--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
     <script src="./js/template.js"></script>
     <script src="./js/register.js"></script>
     <script src="./js/login.js"></script>
-    <script src="./js/contacts2.js"></script>
+    <script src="./js/contacts_mobile.js"></script>
     <script src="./js/includeHTML.js"></script>
 
 
