--- a/contacts.html
+++ b/contacts.html
@@ -16,6 +16,7 @@
     <script src="./js/register.js"></script>
     <script src="./js/login.js"></script>
     <script src="./js/contacts_mobile.js"></script>
+    <script src="./js/contacts_desktop.js"></script>
     <script src="./js/includeHTML.js"></script>
 
 
