add task code cleaning

--- a/add_task.html
+++ b/add_task.html
@@ -48,8 +48,8 @@
             <div class="at-assignedto">
                 <div id="at-label-id" class="at-label-style">Assigned to</div>
                 <div id="assignedto-container-id" class="input_global input_at" >
-                    <input id="assignedto-input-id" placeholder="Select contacts to assign" onclick="openAssignedToOnce()">
-                    <img id="rotate-arrow-id" class="rotate-arrow" src="./assets/svg/arrow_drop_down.svg"  onclick="toggleAssignedToContainer()">
+                    <input id="assignedto-input-id" placeholder="Select contacts to assign" onclick="toggleAssignedToSection(false)">
+                    <img id="rotate-arrow-id" class="rotate-arrow" src="./assets/svg/arrow_drop_down.svg"  onclick="openAssignedbyArrow()">
                 </div>
                 <div id="assigned-to-contacts-id" class="at-dropdown"></div>
                 <div id="added-contacts-id" class="added-contacts"></div>
