--- a/add_task.html
+++ b/add_task.html
@@ -17,7 +17,7 @@
     <script src="./js/template.js" ></script>
     <script src="./js/includeHTML.js"></script>
 
-    <title>Document</title>
+    <title>Add Task</title>
 
 </head>
 <body onload="initAddTask(); includeHTML()">
