For desktop view contactsContentRightSide added in contacts.html and contacts.css classes added

--- a/contacts.html
+++ b/contacts.html
@@ -44,7 +44,16 @@
   <div w3-include-html="./assets/templates/header.html"></div>  <!-- Header for mobile and desktop view </!-->
 
   <div class="contactsContent" id="contacts-content-id">  <!-- Only for mobile view </!-->    
-    <div id="all-contacts-id" class="allContacts"></div>    
+    <div id="all-contacts-id" class="allContacts"></div>
+    <div id="contactsContentRightSideID" class="contactsContentRightSide">
+      <div class="contactsContentRightSideHeadLine">
+        <h1 class="contactsContentRightSideH1">
+          Contacts
+        </h1>
+        <img src="../../assets/img/contacts/contactsContentRightSideBlueStripe.svg" alt="">        
+        <p class="contactsContentRightSideHeadLinePElement">Better with a team</p>
+      </div>
+    </div>    
   </div>
  
   <div w3-include-html="./assets/templates/footer.html"></div>  <!-- Footer for mobile and desktop view </!-->
