--- a/contacts.html
+++ b/contacts.html
@@ -45,6 +45,7 @@
 
   <div class="contactsContent" id="contacts-content-id">  <!-- Only for mobile view </!-->    
     <div id="all-contacts-id" class="allContacts"></div>
+      <div id="one-contact-id"></div>
     <div id="contactsContentRightSideID" class="contactsContentRightSide">
       <div class="contactsContentRightSideHeadLine">
         <h1 class="contactsContentRightSideH1">
