contacts.html comments added

--- a/contacts.html
+++ b/contacts.html
@@ -43,10 +43,10 @@
   
   <div w3-include-html="./assets/templates/header.html"></div>  <!-- Header for mobile and desktop view </!-->
 
-  <div class="contactsContent" id="contacts-content-id">  <!-- Only for mobile view </!-->    
+  <div class="contactsContent" id="contacts-content-id">  <!-- Only for mobile view </!-->
     <div id="all-contacts-id" class="allContacts"></div>
       <div id="one-contact-id"></div>
-    <div id="contactsContentRightSideID" class="contactsContentRightSide">
+    <div id="contactsContentRightSideID" class="contactsContentRightSide"> <!-- Only for desktop view </!-->
       <div class="contactsContentRightSideHeadLine">
         <h1 class="contactsContentRightSideH1">
           Contacts
