Function guestLogin() added in register.js and index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="login-btns-container">
           <button class="filled-btn" name="registerBtn" id="register-btn-id" onclick="login()">Log in</button>
-          <button class="white-btn">Guest Log in</button>
+          <button class="white-btn" onclick="guestLogin()">Guest Log in</button>
         </div>
       </div>
       <div id="signup-container-id" class="signup-container">
