--- a/add_task.html
+++ b/add_task.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--Fav icon integration</!-->
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png"/>
-    <link rel="icon" type="image/png"sizes="32x32" href="./favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/footer.css">  
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/add_task.css">
-    <script src="./js/add_task.js" ></script>
-    <script src="./js/contacts_mobile.js" ></script>
-    <script src="./js/register.js" ></script>
-    <script src="./js/template.js" ></script>
-    <script src="./js/includeHTML.js"></script>
+    <link rel="stylesheet" href="./css/add_task/add_task.css">
+    <script defer src="./js/includeHTML.js"></script> 
+    <script defer src="./js/add_task/add_task.js" ></script>
+    <script defer src="./js/register/register.js" ></script>
+    <script defer src="./js/template.js" ></script>
+    <script defer src="./js/global.js"></script>
     <title>Add Task</title>
 </head>
 <body onload="initAddTask(); includeHTML()">
     <div w3-include-html="./assets/templates/header.html"></div>
-    <section class="at-section">
+    <section id="at-section-id" class="at-section">
         <div class="content-container">
             <h1>Add Task</h1>
             <div class="content-top-and-left">
