--- a/board.html
+++ b/board.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/header.css">
-    <script src="script.js" ></script>
-    <script src="./js/includeHTML.js"></script>
+    <script defer src="./js/includeHTML.js"></script>
+    <script defer src="./js/global.js"></script>
     <title>Document</title>
-
 </head>
-<body onload="init(); includeHTML()">
+<body onload="includeHTML();">
     <div w3-include-html="./assets/templates/header.html"></div>
 
-    <h1>Board</h1>
-    <div w3-include-html="./templates/test.html"></div>
+    
 
     <div w3-include-html="./assets/templates/footer.html"></div>
 </body>
