--- a/contacts.html
+++ b/contacts.html
@@ -1,63 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
-
-    <!--style.css integration</!-->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/contacts.css">
-    <link rel="stylesheet" href="./css/footer.css">    
-    <link rel="stylesheet" href="./css/header.css">
-
-    <!--script.js integration</!-->
-    <script src="./js/template.js"></script>
-    <script src="./js/register.js"></script>    
-    <script src="./js/contacts_mobile.js"></script>
-    <script src="./js/contacts_desktop.js"></script>
-    <script src="./js/includeHTML.js"></script>
-
-
-    <!--Fav icon integration</!-->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon-16x16.png"
-    />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacts</title>
+  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./css/contacts/contacts.css">
+  <link rel="stylesheet" href="./css/footer.css">    
+  <link rel="stylesheet" href="./css/header.css">
+  <script src="./js/includeHTML.js"></script>
+  <script defer src="./js/contacts/contacts.js"></script>
+  <script defer src="./js/contacts/contact_assets.js"></script>
+  <script defer src="./js/template.js"></script>
+  <script defer src="./js/register/register.js"></script>  
+  <script defer src="./js/global.js"></script>  
+  
 </head>
 
 <body onload="contactsInit(); includeHTML();">    
   
-  <div w3-include-html="./assets/templates/header.html"></div>  <!-- Header for mobile and desktop view </!-->
+  <div w3-include-html="./assets/templates/header.html"></div>  
 
-  <div class="contactsContent" id="contacts-content-id">  <!-- Only for mobile view </!-->
-    <div id="all-contacts-id" class="allContacts"></div>
-      <div id="one-contact-id"></div>
-    <div id="contactsContentRightSideID" class="contactsContentRightSide"> <!-- Only for desktop view </!-->
-      <div class="contactsContentRightSideHeadLine">
-        <h1 class="contactsContentRightSideH1">
-          Contacts
-        </h1>
-        <img src="../../assets/img/contacts/contactsContentRightSideBlueStripe.svg" alt="">        
-        <p class="contactsContentRightSideHeadLinePElement">Better with a team</p>
-      </div>
-    </div>    
-  </div>
+  <section id="contacts-section-id" >
+    <div id="contacts-wrapper-id"></div>
+    <div id="add-contact-id" class="ac-circle" onclick="addNewContact()">
+      <span >Add new contact</span>
+      <img src="./assets/img/person_add.png" alt="">
+    </div>
+    <div id="ad-overlay-id" class="ac-overlay d-none"></div>
+     
+  </section>
  
-  <div w3-include-html="./assets/templates/footer.html"></div>  <!-- Footer for mobile and desktop view </!-->
+  <div w3-include-html="./assets/templates/footer.html"></div> 
     
 </body>
 
