--- a/index.html
+++ b/index.html
@@ -5,36 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./css/register/register_style.css">
+  <script defer src="./js/register/register.js"></script>  
+  <script defer src="./js/template.js"></script>
+  <script defer src="./js/global.js"></script>
   <title>Login</title>
-
-  <!--style.css integration</!-->
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/register_style.css">
-
-  <!--script.js integration</!-->
-  <script src="./js/register.js"></script>  
-  <script src="./js/template.js"></script>
-
-  <!--Fav icon integration</!-->
-  <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon-16x16.png"
-    />
 </head>
-
 <body onload="init()">
   <div class="logo">
     <img src="./assets/img/logo.png" alt="join Logo">
