--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacts</title>
   <link rel="stylesheet" href="./css/global.css">
-  <link rel="stylesheet" href="./css/contacts/contacts.css">
+  <link rel="stylesheet" href="./css/contacts/add_contacts.css">
   <link rel="stylesheet" href="./css/footer.css">    
   <link rel="stylesheet" href="./css/header.css">
   <script src="./js/includeHTML.js"></script>
