contacts css work mobile to desktop  responsive

--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,7 @@
   <title>Contacts</title>
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/contacts/add_contacts.css">
+  <link rel="stylesheet" href="./css/contacts/contacts.css">
   <link rel="stylesheet" href="./css/footer.css">    
   <link rel="stylesheet" href="./css/header.css">
   <script src="./js/includeHTML.js"></script>
@@ -22,7 +23,30 @@
   <div w3-include-html="./assets/templates/header.html"></div>  
 
   <section id="contacts-section-id" >
-    <div id="contacts-wrapper-id"></div>
+    <div id="contacts-wrapper-id"  class="contacts-wrapper">
+      <div class="all-contacts">
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+        <h1>sadsadas</h1>
+      </div>
+      <div class="conatcs-menu">
+        <h1>dfgfgh</h1>
+      </div>
+
+    </div>
     <div id="add-contact-id" class="ac-circle" onclick="addNewContact()">
       <span >Add new contact</span>
       <img src="./assets/img/person_add.png" alt="">
