adding new contact possible and rendering posible

--- a/contacts.html
+++ b/contacts.html
@@ -24,30 +24,19 @@
 
   <section id="contacts-section-id" >
     <div id="contacts-wrapper-id"  class="contacts-wrapper">
-      <div class="all-contacts">
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
-        <h1>sadsadas</h1>
+      <div id="all-contacts-id" class="all-contacts">
+        <div id="all-contacts-content-id" class="all-contacts-content"></div>
       </div>
       <div class="conatcs-menu">
-        <h1>dfgfgh</h1>
+        <div class="show-contacts-header">
+          <h1>Contacts</h1>
+          <div class="ac-vertical-bar"></div>
+          <span>Better with a team!</span>
+        </div>
       </div>
 
     </div>
-    <div id="add-contact-id" class="ac-circle" onclick="addNewContact()">
+    <div id="add-contact-id" class="ac-circle" onclick="openAddContactMenu()">
       <span >Add new contact</span>
       <img src="./assets/img/person_add.png" alt="">
     </div>
