open User by click added

--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,7 @@
   <title>Contacts</title>
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/contacts/add_contacts.css">
+  <link rel="stylesheet" href="./css/contacts/show_contact.css">
   <link rel="stylesheet" href="./css/contacts/contacts.css">
   <link rel="stylesheet" href="./css/footer.css">    
   <link rel="stylesheet" href="./css/header.css">
@@ -40,7 +41,8 @@
       <img src="./assets/img/person_add.png" alt="">
     </div>
     <div id="ad-overlay-id" class="ac-overlay d-none"></div>
-     
+    <div id="edit-overlay-id" class="ac-overlay d-none"></div>
+    <div id="show-overlay-id" class="show-overlay d-none"></div>
   </section>
  
   <div w3-include-html="./assets/templates/footer.html"></div> 
