Edit contacts  possible + redirection to board after creating tasks

--- a/contacts.html
+++ b/contacts.html
@@ -50,6 +50,7 @@
       <div id="ad-overlay-id" class="ac-overlay d-none"></div>
       <div id="edit-overlay-id" class="ac-overlay d-none"></div>
       <div id="show-overlay-id" class="show-overlay d-none"></div>
+      <div id="loader-id" class="loader d-none"></div>
     </section>
 
     <div w3-include-html="./assets/templates/footer.html"></div>
