contacts form validation  finished

--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/header.css" />
     <script src="./js/includeHTML.js"></script>
     <script defer src="./js/contacts/contacts.js"></script>
+    <script defer src="./js/contacts/contacts_helper.js"></script>
     <script defer src="./js/contacts/contact_assets.js"></script>
     <script defer src="./js/template.js"></script>
     <script defer src="./js/register/register.js"></script>
@@ -41,8 +42,7 @@
       <div
         id="edit-contact-id"
         class="ec-circle d-none"
-        onclick="openEditContactMenu()"
-      >
+        onclick="openEditContactMenu()">
         <img src="./assets/img/more_vert.png" alt="" />
       </div>
       <div id="ec-menu-id" class="ec-menu-container d-none"></div>
