--- a/board.html
+++ b/board.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/board/board.css">
+    <link rel="stylesheet" href="/css/board/board_card.css">
+    <script src="/js/global.js"></script>
     <script src="/js/includeHTML.js"></script>
+    <script src="/js/board/board.js"></script>
     <title>Board</title>
 
 </head>
