--- a/index.html
+++ b/index.html
@@ -29,15 +29,29 @@
           <div class="login-fields-container">
             <div class="login-fields-gap">
               <div id="login-email-border-id" class="input_global">
-                <input type="email" name="loginUserEMail" id="login-user-e-mail-id" placeholder="E Mail" autocomplete="on" />
+                <input
+                  type="email"
+                  name="loginUserEMail"
+                  id="login-user-e-mail-id"
+                  placeholder="E Mail"
+                  autocomplete="on" />
                 <img class="login-email" src="./assets/img/mail.png" alt="" />
-                <span id="invalid-email-id" class="err-msg d-none">No user found with this email.</span>
+                <span id="invalid-email-id" class="err-msg d-none"
+                  >No user found with this email.</span
+                >
                 <span id="empty-email-id" class="err-msg d-none">This field is required!</span>
-                <span id="this-is-no-email-id" class="err-msg d-none">Enter a valid email (e.g., user@example.com)!</span>
+                <span id="this-is-no-email-id" class="err-msg d-none"
+                  >Enter a valid email (e.g., user@example.com)!</span
+                >
               </div>
 
               <div id="login-pw-border-id" class="input_global">
-                <input type="password" name="loginUserPassword" id="login-user-password-id" placeholder="Password" autocomplete="current-password" />
+                <input
+                  type="password"
+                  name="loginUserPassword"
+                  id="login-user-password-id"
+                  placeholder="Password"
+                  autocomplete="current-password" />
                 <img id="lock-id" class="login-lock" src="./assets/img/lock.png" alt="" />
                 <img
                   id="login-pw-visibility-off-id"
@@ -45,18 +59,35 @@
                   src="./assets/img/visibility_off.png"
                   alt=""
                   onclick="togglePasswordVisibility(event, 'login-pw-visibility-id', 'password', 1)" />
-                <img id="login-pw-visibility-id" class="d-none" src="./assets/img/visibility.png" alt="" onclick="togglePasswordVisibility(event, 'login-pw-visibility-off-id', 'password', -1)" />
+                <img
+                  id="login-pw-visibility-id"
+                  class="d-none"
+                  src="./assets/img/visibility.png"
+                  alt=""
+                  onclick="togglePasswordVisibility(event, 'login-pw-visibility-off-id', 'password', -1)" />
                 <span id="empty-password-id" class="err-msg d-none">This field is required!</span>
-                <span id="invalid-password-id" class="err-msg d-none">Wrong password Ups! Try again.</span>
+                <span id="invalid-password-id" class="err-msg d-none"
+                  >Wrong password Ups! Try again.</span
+                >
               </div>
             </div>
             <div class="remember-me-checkbox-container">
-              <img id="uncheckbox-id" src="./assets/img/checkbox.svg" alt="remember me checkbox" onclick="toggleCheckbox(event)" />
+              <img
+                id="uncheckbox-id"
+                src="./assets/img/checkbox.svg"
+                alt="remember me checkbox"
+                onclick="toggleCheckbox(event)" />
               <span>Remember me</span>
             </div>
           </div>
           <div class="login-btns-container">
-            <button class="filled-btn" name="registerBtn" id="register-btn-id" onclick="login()">Log in</button>
+            <button
+              class="filled-btn register-small"
+              name="registerBtn"
+              id="register-btn-id"
+              onclick="login()">
+              Log in
+            </button>
             <button class="white-btn" onclick="guestLogin()">Guest Log in</button>
           </div>
         </div>
